RESOLVED FIXED160218
onpaymentauthorized callback not received when authorizing for a second time
https://bugs.webkit.org/show_bug.cgi?id=160218
Summary onpaymentauthorized callback not received when authorizing for a second time
Anders Carlsson
Reported 2016-07-26 15:40:54 PDT
onpaymentauthorized callback not received when authorizing for a second time
Attachments
Patch (1.62 KB, patch)
2016-07-26 15:43 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-07-26 15:43:05 PDT
Tim Horton
Comment 2 2016-07-26 15:54:28 PDT
Tests! How do you get into a non-final-but-complete state?
Anders Carlsson
Comment 3 2016-07-26 15:57:18 PDT
(In reply to comment #2) > Tests! How do you get into a non-final-but-complete state? You complete the payment with an error.
Anders Carlsson
Comment 4 2016-07-26 15:58:06 PDT
Note You need to log in before you can comment on or make changes to this bug.