onpaymentauthorized callback not received when authorizing for a second time https://bugs.webkit.org/show_bug.cgi?id=160218 rdar://problem/27527151

Reviewed by Tim Horton.

Only null out the active session if the status is a final state status.

* Modules/applepay/PaymentCoordinator.cpp:
(WebCore::PaymentCoordinator::completePaymentSession):

Canonical link: https://commits.webkit.org/178375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203746 268f45cc-cd09-0410-ab3c-d52691b4dbfc